# libdrm-lima

./: Makefile.am  Makefile.sources  configure.ac
lima/: Makefile.am  Makefile.sources  libdrm_lima.pc.in  lima-symbol-check  lima.h  lima_bo.c  lima_device.c  lima_priv.h  lima_submit.c  lima_vamgr.c
tests/: Makefile.am
tests/lima/: Makefile.am  main.c  red_triangle.h
